# alvinw-chess-gui

./: Cargo.toml
src/: bridge.rs  client.rs  erikfran_chess.rs  erikfran_chess_impl.rs  json_tcp_stream.rs  main.rs  server.rs  view.rs
src/view/: board_view.rs  main_menu.rs
